@@ -9,6 +9,7 @@ DESIGN
 - should the pointer move across the full range of the Bond Type indicator?
 - labels for isosurface controls
 - decide on final set of real molecules
+- change "More Covalent" to "More Covalent Bond", ditto for ionic?
 
 HIGH
 - electronegativity table
@@ -21,7 +22,6 @@ HIGH
 MEDIUM
 - clean up canvas layout code in all tabs, base layout on molecule location
 - canvas centering strategy
-- add Option menu item to switch MEP color scheme to "rainbow" for "Real Molecules" tab
 - partial charge model and view for atom B in triatomic molecule (A-B-C)
 - tick marks are a little off horizontally in EN controls, changes when canvas is resized
 - in Bond, we are setting partial charges of atoms to the delta EN. This works but isn't accurate, do we need a better model?
