@@ -32,6 +32,7 @@ molecule=Molecule
 atomElectronegativities=Atom Electronegativities
 positive=positive
 negative=negative
+rainbowOption=Real Molecules: use rainbow for electrostatic potential
 
 # molecule names
 ammonia=ammonia
